crates/cli/tests/snapshots/list__list_json_exposes_resource_only_mode_slug_and_env_file_without_sentinel.snap
---
source: crates/cli/tests/list.rs
expression: snapshot
---
Object {
    "projects": Array [
        Object {
            "config_path": String("<tempdir>/Resource Project/pv.yml"),
            "env": String("none"),
            "env_file": String("config/development.env"),
            "hostname": Null,
            "id": String("<project-id>"),
            "mode": String("resource-only"),
            "path": String("<tempdir>/Resource Project"),
            "php": String("default"),
            "resources": Array [],
            "slug": String("resource-project"),
            "status": String("unknown"),
        },
    ],
}
