crates/cli/tests/snapshots/list__list_json_outputs_linked_projects.snap
---
source: crates/cli/tests/list.rs
expression: snapshot
---
Object {
    "projects": Array [
        Object {
            "config_path": String("<tempdir>/acme/pv.yml"),
            "env": String("none"),
            "env_file": String(".env"),
            "hostname": String("acme.test"),
            "id": String("<project-id>"),
            "mode": String("served"),
            "path": String("<tempdir>/acme"),
            "php": String("8.4"),
            "resources": Array [
                Object {
                    "resource": String("mysql"),
                    "track": String("8.0"),
                },
            ],
            "slug": String("acme"),
            "status": String("unknown"),
        },
    ],
}
