crates/cli/tests/snapshots/list__list_on_a_terminal_at_60_columns.snap
---
source: crates/cli/tests/list.rs
expression: narrow
---
[pv] list                                             v0.2.4
────────────────────────────────────────────────────────────

PROJECT  MODE  PHP  STATUS  RESOURCES  ENV  PATH

⚠  acme.test · unknown
   served · PHP 8.4 · 2 resources · env warning
   <tempdir>/acme
   ⚠ APP_URL already exists outside the PV block

✗  billing-worker · config-invalid
   resource-only · PHP default · unknown resources · env
   invalid
   <tempdir>/Billing Worker
   ✗ unknown Project config key `unexpected`

✗  2 linked · 1 warning · 1 failed
