crates/cli/tests/snapshots/list__list_on_a_terminal_empty.snap
---
source: crates/cli/tests/list.rs
expression: empty
---
○  No linked Projects
   ↳ In your Project directory, run  pv link
