crates/cli/tests/snapshots/list__list_plain_counts_unreconciled_resources.snap
---
source: crates/cli/tests/list.rs
expression: plain.stdout
---
Project  Mode  PHP  Status  Resources  Env  Path
acme.test  served  8.4  unknown  2  warning  <tempdir>/acme
  env: warning: APP_URL already exists outside the PV block
billing-worker  resource-only  default  config-invalid  unknown  invalid  <tempdir>/Billing Worker
  config: unknown Project config key `unexpected`
