crates/cli/tests/snapshots/list__list_terminal_global_php_default.snap
---
source: crates/cli/tests/list.rs
expression: decorated
---
[pv] list                                                                                                         v0.2.5
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

PROJECT  MODE  PHP  STATUS  RESOURCES  ENV  PATH

○  acme.test · unknown
   served · PHP default · 0 resources · env none
   <tempdir>/acme

●  1 linked · 0 warnings · 0 failed
   default php 8.4
