crates/cli/tests/snapshots/list__resource_list_json_documents_composer_and_frankenphp_omissions.snap
---
source: crates/cli/tests/list.rs
expression: snapshot
---
{
    "installed_but_without_public_list_command": [
        "composer",
        "frankenphp",
    ],
    "listed_resources": [
        "mailpit",
        "mysql",
        "php",
        "postgres",
        "redis",
        "rustfs",
    ],
}
